--- a/wrw-map-food/index.html
+++ b/wrw-map-food/index.html
@@ -8,6 +8,20 @@
   </head>
   <body>
     <div id="map"></div>
+     <script type="infowindow/html" id="infowindow_template">
+      <span> custom </span>
+      <div class="cartodb-popup">
+        <a href="#close" class="cartodb-popup-close-button close">x</a>
+         <div class="cartodb-popup-content-wrapper">
+           <div class="cartodb-popup-content">
+             <img style="width: 100%" src="http://rambo.webcindario.com/images/18447755.jpg">
+             <!-- content.data contains the field info -->
+             <h4>{{content.data.name}}</h4>
+           </div>
+         </div>
+         <div class="cartodb-popup-tip-container"></div>
+      </div>
+    </script>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15.1/cartodb.js"></script>
     <script src="main.js"></script>
   </body>
